発展A.ボタンの操作の可否

--- a/www/index.html
+++ b/www/index.html
@@ -184,7 +184,8 @@
     function btnAClick(e){
       active = true;
       startTime = new Date(); 
-        
+
+      $('#btnA').prop('disabled', true);
         
     }
 
