--- a/www/index.html
+++ b/www/index.html
@@ -205,6 +205,8 @@
         period = 60*parseInt( $("#minute").val() ) + parseInt( $("#second").val() );
         $("#time").html("経過時間: 0");
         $("#remain").html("残り時間: " + period);
+
+         $('#btnA').prop('disabled', false);
         
     }
     
