--- a/www/index.html
+++ b/www/index.html
@@ -200,13 +200,13 @@
 
     // ButtonCがクリックされた時の処理
     function btnCClick(e){
-        alarm();
+        //alarm();
         active = false;
         period = 60*parseInt( $("#minute").val() ) + parseInt( $("#second").val() );
         $("#time").html("経過時間: 0");
         $("#remain").html("残り時間: " + period);
 
-         $('#btnA').prop('disabled', false);
+        $('#btnA').prop('disabled', false);
         
     }
     
