information,5minute,10minuteのボタンの色の変更と5minuteのボタンが押されたときに5分でタイマーがセットされるように変更

--- a/www/index.html
+++ b/www/index.html
@@ -243,7 +243,12 @@
 
     // ButtonFがクリックされた時の処理
     function btnFClick(e){
-      active = true;
+      active = false;
+        period = 60*parseInt( 5 ) + parseInt( 0 );
+        $("#time").html("経過時間: 0");
+        $("#remain").html("残り時間: " + period);
+
+        $('#btnA').prop('disabled', false);
 
     }
 
