--- a/www/index.html
+++ b/www/index.html
@@ -254,7 +254,12 @@
 
     // ButtonGがクリックされた時の処理
     function btnGClick(e){
-      active = true;
+      active = false;
+        period = 60*parseInt( 10 ) + parseInt( 0 );
+        $("#time").html("経過時間: 0");
+        $("#remain").html("残り時間: " + period);
+
+        $('#btnA').prop('disabled', false);
 
     }
 
