--- a/www/index.html
+++ b/www/index.html
@@ -237,8 +237,10 @@
 
     // ButtonEがクリックされた時の処理
     function btnEClick(e){
-      active = true;
-
+      active = false;
+      $("#information1").html("上に好きな時間を入力することで");
+      $("#information2").html("計測することが出来ます");
+      
     }
 
     // ButtonFがクリックされた時の処理
@@ -292,6 +294,8 @@
 
     <div id="remain">Remaining time</div>
     <div id="time">Time</div>
+    <div id="information1">Information1</div>
+    <div id="information2">Information2</div>
     <button id="btnA">Start</button>  
     <button id="btnB">Stop</button>  
     <button id="btnC">Set</button> 
